1.6.2/_sources/arcgis.raster.functions.rst.txt
arcgis.raster.functions module
==============================

.. automodule:: arcgis.raster.functions

abs
___
.. autofunction:: arcgis.raster.functions.abs

acos
____
.. autofunction:: arcgis.raster.functions.acos

acosh
_____
.. autofunction:: arcgis.raster.functions.acosh

apply
_____
.. autofunction:: arcgis.raster.functions.apply

arg_max
_______
.. autofunction:: arcgis.raster.functions.arg_max

arg_median
__________
.. autofunction:: arcgis.raster.functions.arg_median

arg_min
_______
.. autofunction:: arcgis.raster.functions.arg_min

arg_statistics
______________
.. autofunction:: arcgis.raster.functions.arg_statistics

arithmetic
__________
.. autofunction:: arcgis.raster.functions.arithmetic

asin
____
.. autofunction:: arcgis.raster.functions.asin

asinh
_____
.. autofunction:: arcgis.raster.functions.asinh

aspect
______
.. autofunction:: arcgis.raster.functions.aspect

atan
____
.. autofunction:: arcgis.raster.functions.atan

atan2
_____
.. autofunction:: arcgis.raster.functions.atan2

atanh
_____
.. autofunction:: arcgis.raster.functions.atanh

band_arithmetic
_______________
.. autofunction:: arcgis.raster.functions.band_arithmetic

bitwise_and
___________
.. autofunction:: arcgis.raster.functions.bitwise_and

bitwise_left_shift
__________________
.. autofunction:: arcgis.raster.functions.bitwise_left_shift

bitwise_not
___________
.. autofunction:: arcgis.raster.functions.bitwise_not

bitwise_or
__________
.. autofunction:: arcgis.raster.functions.bitwise_or

bitwise_right_shift
___________________
.. autofunction:: arcgis.raster.functions.bitwise_right_shift

bitwise_xor
___________
.. autofunction:: arcgis.raster.functions.bitwise_xor

boolean_and
___________
.. autofunction:: arcgis.raster.functions.boolean_and

boolean_not
___________
.. autofunction:: arcgis.raster.functions.boolean_not

boolean_or
__________
.. autofunction:: arcgis.raster.functions.boolean_or

boolean_xor
___________
.. autofunction:: arcgis.raster.functions.boolean_xor

cire
____
.. autofunction:: arcgis.raster.functions.cire

cig
____
.. autofunction:: arcgis.raster.functions.cig

classify
________
.. autofunction:: arcgis.raster.functions.classify

clay_minerals
_____________
.. autofunction:: arcgis.raster.functions.clay_minerals

clip
____
.. autofunction:: arcgis.raster.functions.clip

colormap
________
.. autofunction:: arcgis.raster.functions.colormap

colormap_to_rgb
_______________
.. autofunction:: arcgis.raster.functions.colormap_to_rgb

colorspace_conversion
______________
.. autofunction:: arcgis.raster.functions.colorspace_conversion

complex
_______
.. autofunction:: arcgis.raster.functions.complex

composite_band
______________
.. autofunction:: arcgis.raster.functions.composite_band

con
___
.. autofunction:: arcgis.raster.functions.con

contrast_brightness
___________________
.. autofunction:: arcgis.raster.functions.contrast_brightness

convolution
___________
.. autofunction:: arcgis.raster.functions.convolution

cos
___
.. autofunction:: arcgis.raster.functions.cos

cosh
____
.. autofunction:: arcgis.raster.functions.cosh

curvature
_________
.. autofunction:: arcgis.raster.functions.curvature

divide
______
.. autofunction:: arcgis.raster.functions.divide

duration
________
.. autofunction:: arcgis.raster.functions.duration

elevation_void_fill
___________________
.. autofunction:: arcgis.raster.functions.elevation_void_fill

equal_to
________
.. autofunction:: arcgis.raster.functions.equal_to

evi
___
.. autofunction:: arcgis.raster.functions.evi

exp
___
.. autofunction:: arcgis.raster.functions.exp

exp10
_____
.. autofunction:: arcgis.raster.functions.exp10

exp2
____
.. autofunction:: arcgis.raster.functions.exp2

expression
__________
.. autofunction:: arcgis.raster.functions.expression

extract_band
____________
.. autofunction:: arcgis.raster.functions.extract_band

ferrous_minerals
________________
.. autofunction:: arcgis.raster.functions.ferrous_minerals

FLOAT
_____
.. autofunction:: arcgis.raster.functions.FLOAT

float_divide
____________
.. autofunction:: arcgis.raster.functions.float_divide

floor_divide
____________
.. autofunction:: arcgis.raster.functions.floor_divide

focal_stats
___________
.. autofunction:: arcgis.raster.functions.focal_stats

gemi
____
.. autofunction:: arcgis.raster.functions.gemi

geometric
_________
.. autofunction:: arcgis.raster.functions.geometric

gndvi
____
.. autofunction:: arcgis.raster.functions.gndvi

grayscale
_________
.. autofunction:: arcgis.raster.functions.grayscale

greater_than
____________
.. autofunction:: arcgis.raster.functions.greater_than

greater_than_equal
__________________
.. autofunction:: arcgis.raster.functions.greater_than_equal

gvitm
_____
.. autofunction:: arcgis.raster.functions.gvitm

hillshade
_________
.. autofunction:: arcgis.raster.functions.hillshade

identity
________
.. autofunction:: arcgis.raster.functions.identity

INT
___
.. autofunction:: arcgis.raster.functions.INT

iron_oxide
__________
.. autofunction:: arcgis.raster.functions.iron_oxide

is_null
_______
.. autofunction:: arcgis.raster.functions.is_null

less_than
_________
.. autofunction:: arcgis.raster.functions.less_than

less_than_equal
_______________
.. autofunction:: arcgis.raster.functions.less_than_equal

ln
__
.. autofunction:: arcgis.raster.functions.ln

local
_____
.. autofunction:: arcgis.raster.functions.local

log10
_____
.. autofunction:: arcgis.raster.functions.log10

log2
____
.. autofunction:: arcgis.raster.functions.log2

lookup
_____
.. autofunction:: arcgis.raster.functions.lookup

majority
________
.. autofunction:: arcgis.raster.functions.majority

mask
____
.. autofunction:: arcgis.raster.functions.mask

max
___
.. autofunction:: arcgis.raster.functions.max

mean
____
.. autofunction:: arcgis.raster.functions.mean

med
___
.. autofunction:: arcgis.raster.functions.med

min
___
.. autofunction:: arcgis.raster.functions.min

minority
________
.. autofunction:: arcgis.raster.functions.minority
minus
_____
.. autofunction:: arcgis.raster.functions.minus

ml_classify
___________
.. autofunction:: arcgis.raster.functions.ml_classify

mod
___
.. autofunction:: arcgis.raster.functions.mod

monitor_vegetation
__________________
.. autofunction:: arcgis.raster.functions.monitor_vegetation

msavi
_____
.. autofunction:: arcgis.raster.functions.msavi


mtvi2
_____
.. autofunction:: arcgis.raster.functions.mtvi2

ndvi
____
.. autofunction:: arcgis.raster.functions.ndvi

ndvire
______
.. autofunction:: arcgis.raster.functions.ndvire

NDVI
____
.. autofunction:: arcgis.raster.functions.NDVI

ndwi
____
.. autofunction:: arcgis.raster.functions.ndwi

negate
______
.. autofunction:: arcgis.raster.functions.negate

not_equal
_________
.. autofunction:: arcgis.raster.functions.not_equal

pansharpen
__________
.. autofunction:: arcgis.raster.functions.pansharpen

plus
____
.. autofunction:: arcgis.raster.functions.plus

power
_____
.. autofunction:: arcgis.raster.functions.power

pvi
___
.. autofunction:: arcgis.raster.functions.pvi

cellstats_range
_______________
.. autofunction:: arcgis.raster.functions.cellstats_range

raster_calculator
_________________
.. autofunction:: arcgis.raster.functions.raster_calculator

raster_collection_function
_________________
.. autofunction:: arcgis.raster.functions.raster_collection_function

remap
_____
.. autofunction:: arcgis.raster.functions.remap

resample
________
.. autofunction:: arcgis.raster.functions.resample

round_down
__________
.. autofunction:: arcgis.raster.functions.round_down

round_up
________
.. autofunction:: arcgis.raster.functions.round_up

rtvi_core
_________
.. autofunction:: arcgis.raster.functions.rtvi_core

savi
____
.. autofunction:: arcgis.raster.functions.savi

segment_mean_shift
__________________
.. autofunction:: arcgis.raster.functions.segment_mean_shift

set_null
________
.. autofunction:: arcgis.raster.functions.set_null

shaded_relief
_____________
.. autofunction:: arcgis.raster.functions.shaded_relief

sin
___
.. autofunction:: arcgis.raster.functions.sin

sinh
____
.. autofunction:: arcgis.raster.functions.sinh

slope
_____
.. autofunction:: arcgis.raster.functions.slope

spectral_conversion
___________________
.. autofunction:: arcgis.raster.functions.spectral_conversion

speckle
_______
.. autofunction:: arcgis.raster.functions.speckle

sqrt
____
.. autofunction:: arcgis.raster.functions.sqrt

square
______
.. autofunction:: arcgis.raster.functions.square

sr
__
.. autofunction:: arcgis.raster.functions.sr

srre
____
.. autofunction:: arcgis.raster.functions.srre

focal_statistics
__________
.. autofunction:: arcgis.raster.functions.focal_statistics

statistics_histogram
____________________
.. autofunction:: arcgis.raster.functions.statistics_histogram


std
___
.. autofunction:: arcgis.raster.functions.std

stretch
_______
.. autofunction:: arcgis.raster.functions.stretch

sultan
______
.. autofunction:: arcgis.raster.functions.sultan

sum
___
.. autofunction:: arcgis.raster.functions.sum

tan
___
.. autofunction:: arcgis.raster.functions.tan

tanh
____
.. autofunction:: arcgis.raster.functions.tanh

tasseled_cap
____________
.. autofunction:: arcgis.raster.functions.tasseled_cap

threshold
_________
.. autofunction:: arcgis.raster.functions.threshold

times
_____
.. autofunction:: arcgis.raster.functions.times

transpose_bits
______________
.. autofunction:: arcgis.raster.functions.transpose_bits

tsavi
_____
.. autofunction:: arcgis.raster.functions.tsavi

unit_conversion
_______________
.. autofunction:: arcgis.raster.functions.unit_conversion

vari
____
.. autofunction:: arcgis.raster.functions.vari

variety
_______
.. autofunction:: arcgis.raster.functions.variety

vector_field
_____________________
.. autofunction:: arcgis.raster.functions.vector_field

vector_field_renderer
_____________________
.. autofunction:: arcgis.raster.functions.vector_field_renderer

weighted_overlay
_____________________
.. autofunction:: arcgis.raster.functions.weighted_overlay

weighted_sum
_____________________
.. autofunction:: arcgis.raster.functions.weighted_sum

